<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <com.example.espressotesting.NewsDetailsView
        android:id="@+id/newsDetailsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" />

</ScrollView> 